[package]
name = "stdcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
scraper = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
encoding = "*"
http = "*"
